package edu.utn.tp_disenyo.hotel_premier.util;

public enum EstadoReserva {
    ACTIVA,
    FINALIZADA,
    CANCELADA
}
