package edu.utn.tp_disenyo.hotel_premier.util;

public enum TipoDoc {
    DNI,
    PASAPORTE,
    LC,
    LE,
    OTRO
}
