@startuml

title 'Hotel Premier: Diagrama de Clases UML'

class Habitacion {
  codigo: String
  capacidad: Integer
  precio: Float
  piso: Piso
  tipo_habitacion: TipoHabitacion
}

class Estado {
  fecha_inicio: Date
  fecha_fin: Date
  estado: EstadoHabitacion
}

enum TipoHabitacion {
  INDIVIDUAL_ESTANDAR
  DOBLE_ESTANDAR
  DOBLE_SUPERIOR
  SUPERIOR_FAMILY_PLAN
  SUITE_DOBLE
}

enum Piso {
    PB
    UNO
    DOS
    TRES
}

enum EstadoHabitacion {
  OCUPADA
  RESERVADA
  FUERA_DE_SERVICIO
}

enum EstadoReserva {
  ACTIVA
  FINALIZADA
  CANCELADA
}

enum TipoDoc {
    DNI
    PASAPORTE
    LC
    LE
    OTRO
}

class Reserva {
  estado: EstadoReserva
  fecha_creacion: Date
  responsable: Huesped
  fecha_inicio: Date
  fecha_fin: Date
}

class Estadia {
  fecha_ingreso: Date
  fecha_egreso: Date
  
  costos: List<Pair<Servicio, costo>>
  obtenerCosto(servicios: List<Servicio>): Float
}

class Servicio {
  tipo_servicio: String
  costo_total: Float
  
  calcularCosto(): Float
}

'Finanzas'

class Factura {
  fecha_emision: Date
  costo_habitacion: Integer
  costo_servicios: Integer
  tipo: Char
}

class DetalleFactura {
  nombre_producto: String
  cantidad_producto: Integer
  precio_producto_unitario: Float
  costo_total: Float
  
  calcularCosto(): Float
}

class NotaDeCredito {
  saldo: Integer
  
  aplicarDescuento(): Factura
  
}

abstract class Pago {
  monto_total: Float
  moneda: String
}

class Comprobante{
  
}

class Tarjeta{
  numero: String
  titular: String
  vencimiento: Date
  cod_seg: Integer
  banco: String
}

class Efectivo{
  
}

class Cheque{
  numero_ord: String
  banco: String
  fecha_cobro: Date
}

'Personas'

abstract class Persona {
  pos_f_iva: String
  nacionalidad: String
  ocupacion: String
  fecha_nac: Date
}

class Contacto {
  telefono: Integer
  correo: String
  direccion: String
}

class Huesped {
  nombre: String
  apellido: String
  fecha_nac: Date
  tipo_doc: TipoDoc
  doc_identidad: String
}

class PersonaJuridica {
  razonSocial: String
}

'DAOs & DTOs'

class PagoService {
  ingresarPago(p: Pago): Pago
  ingresarNotaDeCredito(f: Factura): NotaDeCredito 
}
abstract class PagoDTO {
  monto_total: Float
  moneda: String
}

class ChequeDTO {
  numero_ord: String
  banco: String
  fecha_cobro: Date
}
class TarjetaDTO {
  numero: Integer
  titular: String
  vencimiento: Date
  cod_seg: Integer
  banco: String
}


interface PagoDAO {
  create(p: Pago): Pago
  update(p: Pago): Pago
  delete(p: Pago): Void
  findBy(fact: Factura): List<Factura>
}


interface HuespedDAO {
  create(Huesped): Huesped
  update(Huesped): Huesped
  delete(Huesped): Void
  findBy(nombre, apellido, tipo_dni, dni): List
}

class HuespedService {
  existsByDocumento(docIdentidad: String, tipoDoc: TipoDoc): Huesped
}
abstract class PersonaDTO {
  pos_f_iva: String
  nacionalidad: String
  ocupacion: String
  fecha_nac: Date
}

class HuespedDTO {
  nombre: String
  apellido: String
  fecha_nac: Date
  tipo_dni: Integer
  dni: String
}

class PersonaJuridicaDTO {
  razonSocial: String
}

interface HabitacionDAO {
  create(h: Habitacion): Habitacion
  update(h: Habitacion): Habitacion
  delete(h: Habitacion): Void
  findBy(fecha_ingreso, fecha_egreso, Piso, Huesped, Servicio): List
}

class HabitacionService {
  mostrarEstadoHabitaciones(fecha_inicio: LocalDateTime, fecha_fin: LocalDateTime): Error
  gestionarListados(): List<Habitacion>
  ocuparHabitacion(habitacion: Habitacion): Error
}

class HabitacionDTO {
  capacidad: Integer
  precio: Float
}

interface ReservaDAO {
  create(r: Reserva): Reserva
  update(r: Reserva): Rerserva
  delete(r: Reserva): Void
  findBy(fecha_ingreso, fecha_egreso, Huesped): List<Reserva>
}

class ReservaService {
  reservarHabitacion(habitacion: Habitacion): Reserva
  cancelarReserva(reserva: Reserva): Void
}

class ReservaDTO {
  estado: EstadoReserva
  responsable: Huesped
  nombre: String
  apellido: String
  telefono: Integer
}

interface FacturaDAO {
  create(f: Factura): Factura
  update(f: Factura): Factura
  delete(f: Factura): Void
  findBy(id: Long): List
}

class FacturaService {
  darDeAltaResponsableDePago(p: Persona)
  obtenerResponsableDePago(id: Long)
  facturar(): Factura
}

class FacturaDTO {
  fecha_emision: Date
  costo_habitacion: Integer
  costo_servicios: Integer
  tipo: Char
}

class NotaDeCreditoDTO {
  saldo: Integer
}

'Relaciones'


PagoService ..> PagoDAO
PagoService ..> PagoDTO
PagoDTO <|-- ChequeDTO
PagoDTO <|-- TarjetaDTO

PagoDAO ..> Pago


HuespedService ..> HuespedDAO
HuespedService ..> PersonaDTO
PersonaDTO <|-- HuespedDTO
PersonaDTO <|-- PersonaJuridicaDTO

HuespedDAO ..> Persona


FacturaService ..> FacturaDAO
FacturaService ..> FacturaDTO
FacturaService ..> NotaDeCreditoDTO

FacturaDAO ..> Factura


HabitacionService ..> HabitacionDAO
HabitacionService ..> HabitacionDTO

HabitacionDAO ..> Habitacion


ReservaService ..> HabitacionService
ReservaService ..> ReservaDAO
ReservaService ..> ReservaDTO

ReservaDAO ..> Reserva


Habitacion *-- Estado

Estadia "1..N" -u- "1..N" Huesped
Reserva "0..N" o-- "1..N" Habitacion

Reserva "1" -- "0..N" Estadia
Servicio "0..N"-u-"0..N" Estadia
Factura "0..1" .r.> "1" Estadia
Factura "1" *-- "1..N" DetalleFactura
Pago "0..N" --* "1" Factura
(Pago, Factura) .. Comprobante
Persona -u-* Factura

Pago <|-l- Tarjeta
Pago <|-l- Efectivo
Pago <|-r- Cheque
Factura "1" *-- "0..N" NotaDeCredito
Persona <|-- PersonaJuridica
Persona <|-- Huesped
Persona "1" *-- "0..N" Contacto


@enduml